# SmallWM-Molasses

./: CMakeLists.txt  Containerfile  README.md  default.nix  flake.nix  smallwm-molasses.nix
docs/: LEGAL.md
libs/inih/: CMakeLists.txt
misc/nix/: smallwm-molasses.nix
src/: actions.h  actions.hpp  clientmodel-events.cpp  clientmodel-events.h  clientmodel-events.hpp  common.h  common.hpp  configparse.cpp  configparse.h  configparse.hpp  smallwm.cpp  utils.cpp  utils.h  x-events.cpp  x-events.h  x-events.hpp  xdata.cpp  xdata.h  xdata.hpp
src/logging/: file.cpp  file.h  file.hpp  logging.cpp  logging.h  stream.cpp  stream.h  stream.hpp  syslog.cpp  syslog.h  syslog.hpp
src/model/: changes.cpp  changes.h  changes.hpp  client-model.cpp  client-model.h  client-model.hpp  desktop-type.h  desktop-type.hpp  focus-cycle.cpp  focus-cycle.h  focus-cycle.hpp  screen.cpp  screen.h  screen.hpp  unique-multimap.h  x-model.cpp  x-model.h  x-model.hpp
